# fast_helm

./: .gitignore  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
.github/workflows/: build.yml  deploy.yml  test.yml
app/: __init__.py  config.py  database.py
app/models/: __init__.py  stocks.py  users.py
deploy/eks-helm/: Chart.yaml  README.md  values.yaml
deploy/eks-helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
env/: test_env.yml
migrations/: env.py
migrations/versions/: c492017fde77_.py  dae8da63be0a_add_stock_ticker_company_tables.py
scripts/: test.sh
tests/: test_migrations.py
